--- a/about-us.html
+++ b/about-us.html
@@ -12,13 +12,16 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam quaerat optio omnis, dolorum odit dolores accusamus eum voluptate unde explicabo!
     </p>
     <h3>Vizyonumuz</h3>
+
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas eum saepe aliquam. Magni expedita earum, impedit accusamus sed optio at?
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas eum saepe aliquam. Magni expedita earum, impedit accusamus sed optio at?
         </p>
+    
     <h3>Misyonumuz</h3>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt vel tenetur eligendi id doloremque dolorem voluptas. Facilis placeat error facere fugit assumenda?</p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt vel tenetur eligendi id doloremque dolorem voluptas. Facilis placeat error facere fugit assumenda?</p>
-    
-    <a href="index.html">Ana Sayfa</a>
+    <div class="aboutus">
+        <a href="index.html">Ana Sayfa</a>
+    </div>
 </body>
 </html>
