--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,9 @@
     <p>Adres: Adnan Menderes Havalimanı, Genel Havacılık Terminali, Gaziemir/İzmir</p>
     <p>Tel: 0232 376 00 00</p>
     <p>WhatsApp: +90 530 074 00 00</p>
-    <a href="index.html">Ana Sayfa</a>
+    <div class="aboutus">
+        <a href="index.html">Ana Sayfa</a>
+    </div>
 
     
 </body>
