--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <aside>
         <div class="aside1">
             <h2>Kurucumuz</h2>
-            <img src="image/hakanbaris.JPG" width="200" alt="Hakan Barış">
+            <img src="image/hakanbaris.JPG" width="200" alt="Hakan Barış" border="4px">
             <p>
                 Kurucumuz Hakan Barış 2005 yılında Hava Harp Okulu'dan mezun olduktan sonra 11 yıl Hava Kuvvetleri'nde görev yapmıştır. Son 3 yıl öğretmen pilot olarak Çiğli 2nci Ana Jet Üs Komutanlığı'nda bulunmuştur. Sivil havacılık lisanslarını tamamladıktan sonra çeşitli uçuş okullarında uçuş öğretmeni olarak çalışmıştır. 2024 yılı başında ise kendi soyadını taşıyan uçuş akademisini hayata geçirmiştir.
             
