--- a/filo.html
+++ b/filo.html
@@ -26,7 +26,8 @@
         </ol>
 
     </div>
-    <a href="index.html">Ana Sayfa</a>
-    
+        <div class="aboutus">
+            <a href="index.html">Ana Sayfa</a>
+        </div>
 </body>
 </html>
